# apgbuild

./: .gitignore  .gitmodules  README.md  apgbuild  build.sh  flake.nix  go.mod  main.cpp  meson.build
cmd/apgbuild/: main.go
example/: metadata.json
include/: ApgBuilder.hpp  Helper.hpp
internal/archive/: archive.go  archive_test.go
internal/builder/: builder.go  builder_test.go
internal/checksum/: crc32.go  crc32_test.go  sha256.go  sha256_test.go
internal/elfanalyzer/: elf.go
internal/metadata/: metadata.go  metadata_test.go  split.go
src/: ApgBuilder.cpp  Main.cpp  main.cpp
